# DeepGD

./: .gitignore  README.md  deepgd_demo.ipynb  deepgd_demo.py  model.pt  pyproject.toml  requirements.txt
assets/: rome_index.txt
deepgd/: __init__.py  constants.py  functions.py
deepgd/data/: __init__.py  base_data.py  base_graph_drawing_data.py  graph_drawing_data.py  graph_struct.py
deepgd/data/mixins/: __init__.py  drawing_mixin.py  struct_mixin.py
deepgd/data/transforms/: __init__.py  add_adjacency_info.py  batch_append_column.py  compute_shortest_path.py  delaunay.py  gabriel_graph.py  generate_edge_pairs.py  generate_permutation_edges.py  generate_random_layout.py  normalize_graph.py  populate_graph_attrs.py  random_neighborhood_graph.py  sample_aggregation_edges.py
deepgd/datasets/: __init__.py  rome_dataset.py  suite_sparse_dataset.py
deepgd/metrics/: __init__.py  stress.py  stress_old.py
deepgd/model/: __init__.py
deepgd/model/common/: __init__.py  edge_feature_expansion.py  linear_layer.py  mlp.py  module_factory.py  nnconv_basic_layer.py  nnconv_layer.py  skip_connection.py  traced_module.py
deepgd/model/common/norm_wrappers/: __init__.py  batch_norm_wrapper.py  identity_wrapper.py  norm_wrapper.py
deepgd/model/generator/: generator.py  generator_block.py  generator_feature_router.py  generator_layer.py
deepgd/nn/: __init__.py
deepgd/nn/criteria/: __init__.py  edge_var.py  incident_angle.py  occlusion.py  stress.py  tsne_score.py
deepgd/nn/modules/: __init__.py  deepgd.py  gnn_block.py  gnn_layer.py  weighted_nnconv.py
